<!-- Input Boxes-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/InputScreen"
    android:layout_height="fill_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="1">
<ScrollView
    android:id="@+id/container_scrollView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:elevation="4dp">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:id="@+id/GridLayout"
        android:columnCount="3"
        android:columnOrderPreserved="false"
        android:orientation="vertical"

        >
        <!-- SAR-->
        <TextView
            android:text="Spoil Angle of Repose"
            android:layout_gravity="start"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SAReditView"
            android:hint="@string/SARstring"
            android:layout_gravity="end"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_columnSpan="1"
            android:inputType="number"

            />
        <!-- HW-->
        <TextView
            android:text="Highwall Angle"
            android:layout_gravity="start"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/HWeditView"
            android:hint="@string/HWanglestring"
            android:layout_gravity="end"
            android:layout_columnSpan="1"
            android:layout_row="1"
            android:layout_column="2"
            android:inputType="number"

            />
        <!-- PW-->
        <TextView
            android:text="Pit Width"
            android:layout_gravity="start"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PWeditView"
            android:hint="@string/PitWidthstring"
            android:layout_gravity="end"
            android:layout_column="2"
            android:layout_row="2"
            android:inputType="number"


            />
        <!-- BenchW-->
        <TextView
            android:text="Bench Width"
            android:layout_gravity="start"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BenchwidthView"
            android:hint="@string/BenchWidthstring"
            android:layout_gravity="end"
            android:layout_column="2"
            android:layout_row="3"
            android:inputType="number"

            />
        <!-- BenchHeight-->
        <TextView
            android:text="Bench Height"
            android:layout_gravity="start"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BenchheightView"
            android:hint="@string/BenchHeightstring"
            android:layout_gravity="end"
            android:layout_column="2"
            android:layout_row="4"
            android:inputType="number"

            />
        <TextView
            android:text="DL Reach"
            android:layout_gravity="start"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DLreach"
            android:hint="@string/DLreach"
            android:layout_gravity="end"
            android:layout_column="2"
            android:layout_row="5"
            android:inputType="number"
            android:text="300"/>
        <TextView
            android:text="Tub Width"
            android:layout_gravity="start"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TubW"
            android:hint="@string/TubW"
            android:layout_gravity="end"
            android:layout_column="2"
            android:layout_row="6"
            android:inputType="number"
            android:text="80"/>

        <TextView
            android:text="Dump Height"
            android:layout_gravity="start"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DumpHView"
            android:hint="@string/DumpHView"
            android:layout_gravity="end"
            android:layout_column="2"
            android:layout_row="7"
            android:inputType="number"
            android:text="150"/>

        <TextView
            android:text="Dig Depth"
            android:layout_gravity="start"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DigDView"
            android:hint="@string/DigDView"
            android:layout_gravity="end"
            android:layout_column="2"
            android:layout_row="8"
            android:inputType="number"
            android:text="150"/>
    </GridLayout>
</ScrollView>
    <Button
        android:id="@+id/ButtonCreatePit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Pit"
        android:orientation="vertical"
        android:onClick="sendPitdim"
        android:elevation="4dp"/>
</LinearLayout>

